Eclipse_e-puck2/Workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:19:12 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
14:21:41 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
14:22:08 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
14:24:23 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
14:27:32 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
14:28:19 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
14:31:16 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
14:32:29 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
15:12:43 **** Incremental Build of configuration Default for project MyProject ****
make all 
[1;34mCompiling main.c[0m
main.c: In function 'main':
main.c:15:5: error: expected ';' before 'halInit'
     halInit();
     ^~~~~~~
../e-puck2_main-processor/ChibiOS//os/common/ports/ARMCMx/compilers/GCC/rules.mk:216: recipe for target 'build/obj/main.o' failed
make: *** [build/obj/main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
15:13:00 **** Incremental Build of configuration Default for project MyProject ****
make all 
[1;34mCompiling main.c[0m
main.c: In function 'main':
main.c:15:5: error: expected ';' before 'halInit'
     halInit();
     ^~~~~~~
../e-puck2_main-processor/ChibiOS//os/common/ports/ARMCMx/compilers/GCC/rules.mk:216: recipe for target 'build/obj/main.o' failed
make: *** [build/obj/main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
15:14:00 **** Incremental Build of configuration Default for project MyProject ****
make all 
[1;34mCompiling main.c[0m
[1;34mLinking build/Project_template.elf[0m
[1;34mCreating build/Project_template.hex[0m
[1;34mCreating build/Project_template.bin[0m
[1;34mCreating build/Project_template.dmp[0m

   text	   data	    bss	    dec	    hex	filename
  47908	   2948	   6236	  57092	   df04	build/Project_template.elf
[1;34mCreating build/Project_template.list[0m

[1;34mDone[0m
15:14:10 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
15:14:45 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
15:16:26 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
15:17:15 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
15:26:08 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
15:28:33 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
15:30:03 **** Incremental Build of configuration Default for project MyProject ****
make all 
make: Nothing to be done for 'all'.
